# BxDFs

./: .gitignore  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
cpp/: Makefile
cpp/bxdf/: HGScatter.cpp  HGScatterSampling.inl  KPFuzz.cpp  KPFuzzSampling.inl  KPVelvet.cpp  KPVelvetSampling.inl  PraterFuzz.cpp  PraterFuzzSampling.inl  PraterScatter.cpp  PraterScatterSampling.inl  README.md  sampleDir.h
cpp/bxdf/Args/: HGScatter.args  KPVelvet.args  PraterFuzz.args  PraterScatter.args
doc/: INSTALL.md  README.md
python3/: install_shaders.py
